syntax = "proto3";

package event;

// Definition of the Event message
message Event {
  string id = 1;
  string name = 2;
  string description = 3;
  string location = 4;
  string date = 5;
  float ticket_price = 6;
}

// Request and response messages for Event methods
message GetEventRequest {
  string event_id = 1;
}

message GetEventResponse {
  Event event = 1;
}

message GetAllEventsRequest {
}

message GetAllEventsResponse {
  repeated Event events = 1;
}

message CreateEventRequest {
  string name = 1;
  string description = 2;
  string location = 3;
  string date = 4;
  float ticket_price = 5;
}

message CreateEventResponse {
  Event event = 1;
}

message DeleteEventRequest {
  string event_id = 1;
}
message DeleteEventResponse {
  string message = 1;
}

// Definition of the Event service
service EventService {
  rpc GetEvent(GetEventRequest) returns (GetEventResponse);
  rpc GetAllEvents(GetAllEventsRequest) returns (GetAllEventsResponse);
  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse);
  rpc DeleteEvent(DeleteEventRequest) returns (DeleteEventResponse);
  // Additional methods as needed
}
